--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <pre id="output"></pre>
     
     <script>
-    const API = 'https://script.google.com/macros/s/AKfycbzmw8-e5L6cRk54FcvU4Ev5nkQYOSNNhdLs4XFhI_eP-9Sz1GNHkKWPf1mxWs2-p7Yx/exec';          // <-- paste here
+    const API = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLhVeplOVc9fnfYdrn3E8QNX2Lm7sf0ePGKCqU-MfnJDZfmnFoF-vcg4gfUP2SD8UZDoxYTQ4eplk3f3Zqpy476WIZrCcf64fvVTt2d_6lgbWwS2YXepGA5ckC4AkEhp4UQcT-f-0uPMN-bEu7Vab0nRcasYe7-gmxwC82SjyfGIGWPoaEq48jKr-3z-1oeqtBZGa5lNDRJd6r_kos4A7FvAUkuqbZL8OhiuYqpsq8z1tXjD95CdMOqA0Px6n20HU4CzQ7ICWHOV9xuNAlVCbHPWhaggEA&lib=MQAjBbja3hUCHt1R7KHpTgKjcFc67WdJ1';          // <-- paste here
     const state = {};                                 // selections
     
     async function build(){
