update to pure API token

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <pre id="output"></pre>
     
     <script>
-    const API = 'https://script.google.com/macros/s/AKfycbzRefutHR2kK1dcn7-T9cLcVeogb1ANOABVxaS2sOn1V8kw_orM-ENc3EKgzC7cEPzk/exec';          // <-- paste here
+    const API = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgMghqCjOLLFT-j_8e_ht8C1-liJAnTk2vVrrBcTT4iOQLaxS9bV8JNofKRCQ71GROisl66Yg_HuppqOzfP4zDmqdNW-RNomBe_dm-ZMJTDROiq6rj_sElLWUz7IimGx5iW86mqaOGHTCaJ8saVzagxO8GDt_evIFQe9eAP7d5WO8rUvjO0LIvWes_hub8DomcJxPYFCa7wVLdQ5Qi2XZi8eSyaPVJf6JAxPj7_IzvjNNWpEGOiHFVOxtM09ys3jAFEnGekhL82NyiSRNayBsp9ktICjQ&lib=MQAjBbja3hUCHt1R7KHpTgKjcFc67WdJ1';          // <-- paste here
     const state = {};                                 // selections
     
     async function build(){
