GTP Refined prompt output

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     button{padding:.35rem .8rem}.addBox{margin-top:.5rem}
   </style></head><body>
   
-  <h1>Prompt Constructor</h1>
+  <h1>Composite Render Prompt Constructer </h1>
   <div id="formArea"></div>
   <button id="genBtn">Generate prompt</button>
   <pre id="output"></pre>
